# WonderX

./: README.md
Client/: Build_Linux.sh  CMakeLists.txt  README.md  Toolchain-Ubuntu-mingw64.cmake  main.c
Hardware/: README.md
Loader/: Loader.asm  Loader.wsc  README.md  WonderSwan.inc  build.bat  wsutils.asm
Loader/fonts/: c_font0.gfx  c_font0.pal  c_font1.gfx  c_font1.pal  c_font2.gfx  c_font2.pal  c_font3.gfx  c_font3.pal  fontconv.bat  m_font0.gfx  m_font1.gfx  m_font2.gfx  m_font3.gfx  m_font4.gfx  m_font5.gfx  m_font6.gfx  mcfont1.gfx  mcfont2.gfx  mcfont3.gfx  mcfont4.gfx  mcfont5.gfx  mcfont6.gfx
Schematics/: README.md
